RESOLVED FIXED46813
[EFL] General small fixes.
https://bugs.webkit.org/show_bug.cgi?id=46813
Summary [EFL] General small fixes.
João Paulo Rechi Vita
Reported 2010-09-29 09:21:22 PDT
[EFL] General small fixes.
Attachments
Patch (3.03 KB, patch)
2010-09-29 09:24 PDT, João Paulo Rechi Vita
no flags
João Paulo Rechi Vita
Comment 1 2010-09-29 09:24:42 PDT
WebKit Commit Bot
Comment 2 2010-09-29 09:43:09 PDT
Comment on attachment 69202 [details] Patch Clearing flags on attachment: 69202 Committed r68652: <http://trac.webkit.org/changeset/68652>
WebKit Commit Bot
Comment 3 2010-09-29 09:43:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.