2010-09-29  João Paulo Rechi Vita  <jprvita@profusion.mobi>

Reviewed by Antonio Gomes.

        [EFL] General small fixes.
        https://bugs.webkit.org/show_bug.cgi?id=46813

        This commit spots a comparison between signed and unsigned integer
        expressions, a missing return and a never-called function.

        No new tests since no new funcionality has been added.

        * platform/efl/SharedBufferEfl.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile):
2010-09-29  João Paulo Rechi Vita  <jprvita@profusion.mobi>

        Reviewed by Antonio Gomes.

        [EFL] General small fixes.
        https://bugs.webkit.org/show_bug.cgi?id=46813

        This commit spots a comparison between signed and unsigned integer
        expressions, a missing return and a never-called function.

        * WebCoreSupport/FullscreenVideoControllerEfl.cpp:
        (FullscreenVideoController::canPlay):

Canonical link: https://commits.webkit.org/59314@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68652 268f45cc-cd09-0410-ab3c-d52691b4dbfc