WebKit/efl/WebCoreSupport/FullscreenVideoControllerEfl.cpp
@@ -91,6 +91,7 @@ void FullscreenVideoController::exitFullscreen()
 bool FullscreenVideoController::canPlay() const
 {
     notImplemented();
+    return false;
 }
 
 void FullscreenVideoController::play()
@@ -174,11 +175,6 @@ void FullscreenVideoController::doSeek()
 }
 
 void FullscreenVideoController::endSeek()
-{
-    notImplemented();
-}
-
-static String timeToString(float time)
 {
     notImplemented();
 }
